--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "dev": "lite-server",
-    "lint": "eslint --fix '**/*.js' ./"
+    "lint": "eslint --fix '**/*.js' ./",
+    "commit": "git-cz"
   },
   "lint-staged": {
     "*.{js,css,json,md}": [
